--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "dayjs": "^1.11.7",
     "dom-to-image": "^2.6.0",
     "dompurify": "^3.1.0",
+    "graphql": "^16.10.0",
+    "graphql-request": "^7.1.2",
     "leaflet": "^1.7.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
@@ -143,5 +145,6 @@
     "webpack": "^5.77.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
