--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "neodash",
   "version": "2.4.10",
-  "description": "NeoDash - Neo4j Dashboard Builder",
+  "description": "LedgerCore - Dashboard Builder",
   "neo4jDesktop": {
     "apiVersion": "^1.2.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/neo4j-labs/neodash/"
+    "url": "https://github.com/silversixpence-crypto/ledgercore-dash/"
   },
   "license": "Apache-2.0",
   "icons": [
@@ -30,7 +30,10 @@
     "lint": "eslint --ext .ts --ext .tsx .",
     "lint-staged": "lint-staged --config .lintstagedrc.json",
     "test": "yarn cypress open",
-    "test-headless": "yarn cypress run"
+    "test-headless": "yarn cypress run",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
+    "test:unit:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "Neo4j Labs",
@@ -120,6 +123,11 @@
     "@emotion/styled": "^11.6.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@redux-devtools/extension": "^3.2.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/redux-mock-store": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "babel-loader": "^8.2.3",
@@ -134,13 +142,17 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "husky": "^8.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react-refresh": "^0.14.0",
+    "redux-mock-store": "^1.5.5",
     "serverless-finch": "^4.0.0",
     "source-map-loader": "^4.0.0",
     "style-loader": "^1.1.3",
     "styled-components": "^5.3.3",
+    "ts-jest": "^29.3.2",
     "typescript": "^4.8.4",
     "webpack": "^5.77.0",
     "webpack-cli": "^4.9.1",
