--- a/.env
+++ b/.env
@@ -1,19 +1,22 @@
 # LedgerCore Dashboard Environment Configuration
 
-# API URLs
-REACT_APP_API_URL=http://localhost:8080/api
-REACT_APP_GRAPHQL_API_URL=http://localhost:8080/graphql
+# API URLs - For local development
+REACT_APP_API_URL=http://localhost:4000/api
+REACT_APP_GRAPHQL_API_URL=http://localhost:4000/graphql
 
 # Neo4j Connection Defaults
-REACT_APP_DEFAULT_NEO4J_URL=localhost
-REACT_APP_DEFAULT_NEO4J_PORT=7687
-REACT_APP_DEFAULT_NEO4J_DATABASE=neo4j
+# These are handled by the backend in Docker mode
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=password
+NEO4J_DATABASE=bitcoin
 
 # Application Settings
-REACT_APP_DEFAULT_DASHBOARD_TITLE=New dashboard
+REACT_APP_DEFAULT_DASHBOARD_TITLE=LedgerCore Dashboard
 REACT_APP_ALLOW_QUERIES_WITHOUT_LOGIN=true
 
 # Branding
 REACT_APP_DASHBOARD_HEADER_COLOR=#0B297D
 REACT_APP_DASHBOARD_HEADER_BUTTON_COLOR=
 REACT_APP_DASHBOARD_HEADER_TITLE_COLOR=#FFFFFF
+NETWORK_NAME=bitcoin-to-neo4jdash_ledgercore-network
