--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+  # Frontend service
   ledgercore-dashboard:
     build:
       context: .
@@ -8,14 +9,13 @@ services:
     ports:
       - "5005:5005"
     environment:
-      # API URLs - Using the hosted API
-      - API_URL=https://dashboard-db.ledgercore.io/api
-      - GRAPHQL_API_URL=https://dashboard-db.ledgercore.io/graphql
+      # API URLs - Point to the backend GraphQL service
+      # These can be overridden with environment variables
+      - GRAPHQL_API_URL=${GRAPHQL_API_URL:-http://ledgercore-backend:4000/graphql}
+      - API_URL=${API_URL:-http://ledgercore-backend:4000/api}
       
-      # Neo4j Connection Defaults - These are handled by the hosted API
-      - DEFAULT_NEO4J_URL=remote
-      - DEFAULT_NEO4J_PORT=7687
-      - DEFAULT_NEO4J_DATABASE=neo4j
+      # Neo4j Connection Defaults - These are handled by the backend
+      - DEFAULT_NEO4J_DATABASE=${NEO4J_DATABASE:-bitcoin}
       
       # Application Settings
       - DEFAULT_DASHBOARD_TITLE=LedgerCore Dashboard
@@ -28,26 +28,13 @@ services:
     restart: unless-stopped
     networks:
       - ledgercore-network
-
-  # Using hosted API at https://dashboard-db.ledgercore.io/ instead of local API server
-
-  # Example Neo4j database (uncomment and configure as needed)
-  # neo4j:
-  #   image: neo4j:5.9.0
-  #   ports:
-  #     - "7474:7474"
-  #     - "7687:7687"
-  #   environment:
-  #     - NEO4J_AUTH=neo4j/password
-  #   volumes:
-  #     - neo4j-data:/data
-  #   networks:
-  #     - ledgercore-network
+    # This allows the container to find services on the host machine if needed
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 networks:
   ledgercore-network:
     driver: bridge
-
-# Uncomment if using Neo4j
-# volumes:
-#   neo4j-data:
+    # Use external network if your backend is in a separate docker-compose file
+    external: true
+    name: ${NETWORK_NAME:-ledgercore-network}
