update nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ http {
 
         # Dashboard UI
         location / {
-            proxy_pass http://ledgercore-dash-ledgercore-dashboard-1:5005;
+            proxy_pass http://ledgercore-dashboard:5005;
             
             # WebSocket support
             proxy_http_version 1.1;
