--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     expose:
       - "5005"
     environment:
-      # API URLs - Point to nginx proxy
+      # API URLs - Use relative paths so they work both locally and in production
       # These can be overridden with environment variables
-      - GRAPHQL_API_URL=${GRAPHQL_API_URL:-http://localhost/graphql}
-      - API_URL=${API_URL:-http://localhost/api}
+      - GRAPHQL_API_URL=${GRAPHQL_API_URL:-/graphql}
+      - API_URL=${API_URL:-/api}
       
       # Neo4j Connection Defaults - These are handled by the backend
       - DEFAULT_NEO4J_DATABASE=${NEO4J_DATABASE:-bitcoin}
