--- a/nginx.conf
+++ b/nginx.conf
@@ -62,8 +62,8 @@ http {
         }
 
         # GraphQL endpoint proxy
-        location /graphql {
-            proxy_pass http://ledgercore-backend:4000/graphql;
+        location /graphql/ {
+            proxy_pass http://ledgercore-backend:4000/graphql/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
