--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ http {
 
         # Backend API proxy
         location /api/ {
-            proxy_pass http://ledgercore-backend:4000/api/;
+            proxy_pass http://host.docker.internal:4000/api/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -63,7 +63,7 @@ http {
 
         # GraphQL endpoint proxy
         location /graphql/ {
-            proxy_pass http://ledgercore-backend:4000/graphql/;
+            proxy_pass http://host.docker.internal:4000/graphql/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
